RESOLVED FIXED214716
[JSC] Arrow function |this| resolution should not be trapped by with-scope
https://bugs.webkit.org/show_bug.cgi?id=214716
Summary [JSC] Arrow function |this| resolution should not be trapped by with-scope
Yusuke Suzuki
Reported 2020-07-23 17:47:18 PDT
[JSC] Arrow function |this| resolution should not be trapped by with-scope
Attachments
Patch (10.88 KB, patch)
2020-07-23 17:50 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2020-07-23 17:50:42 PDT
Yusuke Suzuki
Comment 2 2020-07-23 17:50:44 PDT
EWS
Comment 3 2020-07-23 20:53:50 PDT
Committed r264809: <https://trac.webkit.org/changeset/264809> All reviewed patches have been landed. Closing bug and clearing flags on attachment 405105 [details].
Note You need to log in before you can comment on or make changes to this bug.