Source/JavaScriptCore/runtime/CommonIdentifiers.h
@@ -305,7 +305,6 @@ namespace JSC {
         const Identifier nullIdentifier;
         const Identifier emptyIdentifier;
         const Identifier underscoreProto;
-        const Identifier thisIdentifier;
         const Identifier useStrictIdentifier;
         const Identifier timesIdentifier;
     private:
